# Beaglebone-SlushEngine-Control

./: CMakeLists.txt  Robot.cpp  gpio_pin.cpp  robot.cpp
BeagleBone-SPI-Library/: CMakeLists.txt
BeagleBone-SPI-Library/SPI_Library/: SPI.c  SPI.h
lib-l6470/: CMakeLists.txt
lib-l6470/examples/slush/: get_temp.cpp  simple_move.cpp
lib-l6470/include/: debug_print.h  gpio_pin.h  l6470.h  slushboard.h  slushmotor.h
lib-l6470/src/: gpio_pin.cpp  l6470.cpp  l6470commands.cpp  l6470config.cpp  l6470support.cpp  slushboard.cpp  slushmotor.cpp  slushtemp.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: server.cpp
src/listener/: CMakeLists.txt  gripper.cpp  mytimer.cpp  mytimer.h  package.xml  robot.cpp  shoulder.cpp  single.cpp  steppers.cpp
src/motors/: CMakeLists.txt  package.xml
src/motors/BeagleBone-SPI-Library/Example/: Main.c
src/motors/BeagleBone-SPI-Library/SPI_Library/: SPI.c  SPI.h
src/motors/include/motors/: Servo.h  debug_print.h  gpio_pin.h  l6470.h  l6470constants.h  slushboard.h  slushmotor.h
src/motors/lib-PWM/: CMakeLists.txt
src/motors/lib-Servo/: CMakeLists.txt
src/motors/lib-Servo/include/: PWM.h  Servo.h
src/motors/lib-Servo/src/: PWM.c  Servo.cpp
src/motors/lib-l6470/: CMakeLists.txt
src/motors/lib-l6470/examples/slush/: get_set_param_test.cpp  input_output.cpp  limit_switch.cpp  precise_move.cpp
src/motors/lib-l6470/include/: l6470.h  l6470constants.h  slushboard.h  slushmotor.h
src/motors/lib-l6470/src/: gpio_pin.cpp  l6470.cpp  l6470commands.cpp  l6470config.cpp  l6470dump.cpp  l6470support.cpp  slushmotor.cpp
src/moveo_moveit/: CMakeLists.txt  package.xml
src/moveo_moveit/msg/: ArmJointState.msg
